tests/snapshots/python_parity_unit_snapshots__dropin_70_hooks_pre_only.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: "dropin(&r.drop_ins, \"70-hooks.conf\")"
---
[Service]
Environment=ACTIONS_RUNNER_HOOK_JOB_STARTED=/opt/gha-hooks/pre-job.sh
BindReadOnlyPaths=/opt/gha-hooks
