tests/snapshots/python_parity_unit_snapshots__dropin_80_lognamespace.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: "dropin(&r.drop_ins, \"80-lognamespace.conf\")"
---
[Service]
SyslogIdentifier=ghars-buckos
LogNamespace=ghars-buckos
