tests/snapshots/python_parity_unit_snapshots__env_file_ccache_only_binding.snap
---
source: tests/python_parity_unit_snapshots.rs
assertion_line: 467
expression: r.env_file
---
LANG=C.UTF-8
CCACHE_DIR=/var/lib/ghars/default/.ccache
KTSTR_LOCK_DIR=/var/lib/ghars/default/.ktstr
KTSTR_CACHE_DIR=/var/lib/ghars/default/.ktstr
CCACHE_MAXSIZE=50G
