tests/snapshots/python_parity_unit_snapshots__env_file_multi_binding_direct_construct.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: r.env_file
---
LANG=C.UTF-8
CCACHE_DIR=/var/lib/ghars/default/.ccache
KTSTR_LOCK_DIR=/var/lib/ghars/default/.ktstr
KTSTR_CACHE_DIR=/var/lib/ghars/default/.ktstr
CCACHE_MAXSIZE=50G
CCACHE_MAXSIZE=100G
