tests/snapshots/python_parity_unit_snapshots__env_file_no_caches_no_operator_env.snap
---
source: tests/python_parity_unit_snapshots.rs
assertion_line: 450
expression: r.env_file
---
LANG=C.UTF-8
KTSTR_LOCK_DIR=/var/lib/ghars/default/.ktstr
KTSTR_CACHE_DIR=/var/lib/ghars/default/.ktstr
